syntax = "proto3";

package io.products.channelProduct.api;

option java_outer_classname = "ChannelProductApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
// import "io/products/channel_product/domain/channel_product_domain.proto";

service ChannelProductService {
    option (kalix.codegen) = {
      // value_entity: {
      //   name: "io.products.channelProduct.domain.ChannelProduct"
      //   entity_type: "channel_products"
      //   state: "io.products.channelProduct.domain.ChannelProductState"
      // }
      event_sourced_entity: {
        name: "io.products.channelProduct.domain.ChannelProduct"
        entity_type: "channel_products"
        state: "io.products.channelProduct.domain.ChannelProductState"
        events: [
          "io.products.channelProduct.domain.ChannelProductDeleted",
          "io.products.channelProduct.domain.ChannelProductCreated"
          ]
      }
    };
  
    rpc CreateChannelProduct(ChannelProduct) returns (google.protobuf.Empty);
    
    rpc GetChannelProduct(GetChannelProductRequest) returns (ChannelProduct){
      option (google.api.http) = {
          post: "/get_channel_product"
          body: "*"
      };
  };

    // rpc UpdateChannelProduct(ChannelProduct) returns (google.protobuf.Empty);

    rpc DeleteChannelProduct(DeleteChannelProductRequest) returns (google.protobuf.Empty);

}

message ChannelProduct {
    string id = 1 [(kalix.field).entity_key = true];
    string productId = 2;
    string channelId = 3;

    repeated ChannelProductAttribute channelProductAttribute = 4;
    repeated ChannelProductVariantGroup channelProductVariantGroup = 5;
    repeated ChannelProductOptionGroup channelProductOptionGroup = 6;
    bool isDeleted = 7;
    string eventId = 8;

}

message GetChannelProductRequest {
  string id = 1  [(kalix.field).entity_key = true];
}
message DeleteChannelProductRequest {
    string id = 1 [(kalix.field).entity_key = true];
}

message ChannelProductAttribute {
  string attrId = 1 [(kalix.field).entity_key = true];
  string chnlAttrName = 2;
  string chnlAttrType = 3;
  string value = 4;
  bool isCommon = 5;
  
}


message ChannelProductVariantGroup {
  repeated ChannelProductVariant channelProductVariant = 1;
}


message ChannelProductVariant {
  string vrntId = 1 [(kalix.field).entity_key = true];
  string chnlVrntName = 2;
  string chnlVrntType = 3;
  string value = 4;
}

message ChannelProductOptionGroup {
  repeated ChannelProductOption channelProductOption = 1;
}


message ChannelProductOption {
  string optnId = 1 [(kalix.field).entity_key = true];
  string chnlOptnName = 2;
  string chnlOptnType = 3;
  string value = 4;
}

message ChannelProductHttpResponse {
  string status = 1;
  string description = 2;
  // You can add more fields as needed.
}